feat: Proper logs addition from Node-RED to HAIC via client
- Various changes in HAIC itself:
  - Attach VSCode and debugger into the backend container
  - New API endpoint that does the exact same as the log upload, but as
    JSON and not as file
- Updated the HAIC API client, re-generated axios client
- Updated the HAIC nodes in Node-RED, especially the log addition
- Restored the HAIC log registration (only interacts with DB, not with
  MinIO)
