# backend/app/schemas/log.py
@@ -102,3 +102,7 @@ class LogSchema(BaseModel):
     performance_infrastructure: Optional[PerformanceInfrastructure] = None
     performance_logs: Optional[PerformanceLogs] = None
     ai_model_data: Optional[AIModelData] = None
+
+
+class LogCompleteSchema(LogSchema):
+    configuration_id: int
