# node-red/human_ai_benchmark_suite/models/log-complete-schema.ts
@@ -1,0 +1,94 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Human-AI Benchmark Suite
+ * An application to evaluate Human-AI collaboration.
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+ /**
+ * 
+ *
+ * @export
+ * @interface LogCompleteSchema
+ */
+export interface LogCompleteSchema {
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    sessionId: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    userId: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    aiModelVersion?: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    appVersion: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    startTime: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    endTime: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    interactionData?: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    retrainEvents?: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    performanceInfrastructure?: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    performanceLogs?: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    aiModelData?: any;
+
+    /**
+     * @type {any}
+     * @memberof LogCompleteSchema
+     */
+    configurationId: any;
+}
